# AutoFly-demo

./: README.md  sim_tutorial.md  未知动态环境自主飞行系统说明书.docx
3d-printings/: README.md  landframe-double.gcode  landframe-double.stl  landframe.gcode  landframe.ipt  landframe.stl  landleg.stl  latte_d435_frame_new_legs.ipt  latte_d435_frame_new_legs.stl  latte_d435_frame_s2new.gcode  latte_d435_frame_s2new.ipt  latte_d435_frame_s2new.stl
src/: token.txt
src/FLVIS/: CMakeLists.txt  README.md
src/FLVIS/launch/: flvis_d435_pixhawk_depth.launch  flvis_d435_pixhawk_stereo.launch  flvis_d435i_depth.launch  flvis_d435i_stereo.launch
src/FLVIS/launch/d435_pixhawk/: d435.json  depth_px4.yaml  sn841512070537_depth_px4.yaml  sn841512070537_stereo_px4.yaml
src/FLVIS/launch/d435i/: camera_params_start.launch  d435i.json  d435i_depth.launch  d435i_stereo.launch  hight_accuracy_default.json  rs_rgbd_848_30.launch  sn943222072828_depth.yaml  sn943222072828_stereo.yaml
src/FLVIS/src/frontend/: vo_tracking.cpp
src/UAPE_planner/: CMakeLists.txt  README.md  package.xml  renice.sh
src/UAPE_planner/launch/: flvis_pp_start.launch  hw_rviz.launch  imu_boost.sh  pcl_filter_rgb.launch  planning_params.yaml  planning_params_sim.yaml  play_bags.launch  posix_sitl.launch  program_flyonce.launch  px4.launch  record_ball.sh  sim_traj_node.launch  traj_node.launch  traj_rviz.launch  vins_pp_start.launch
src/UAPE_planner/scripts/: dynobs_tracker(复件)--for paper.py  dynobs_tracker.py  dynobs_tracker_cldet.py  dynobs_tracker_sim.py
src/UAPE_planner/src/: Tools.cpp  Tools.h  am_traj.hpp  chen_filter_rgb.cpp  planner_fast.cpp  planner_fast.h  ros_missn.cpp  ros_missn.h  run_plannctrl.cpp  run_plannctrl_astar.cpp  tempCodeRunnerFile.cpp  traj_min_jerk.hpp  vo_repub_rec.cpp
src/UAPE_planner/src/call_states/: ros_communicate.cpp  ros_communicate.h  tempCodeRunnerFile.h
src/UAPE_planner/src/path_searching/include/path_searching/: kinodynamic_astar.h
src/UAPE_planner/src/path_searching/src/: kinodynamic_astar.cpp
src/UAPE_planner/src/traj_opt/: lbfgs.hpp  se3_planner.h  se3gcopter_cpu.hpp
src/px4Controller/: README.md
src/px4Controller/firmwares_and_params/: cuav_nora_default_200Hz_Telem1.px4  cuav_nora_default_200Hz_Telem2.px4  cuav_x7pro_default.px4  px4_fmu-v5_default.px4
src/px4Controller/mavros_launch_files/: px4.launch  px4_pluginlists.yaml
src/px4Controller/src/: chmod_serial.sh  renice.sh  run_ctrl.sh  run_support.sh
src/px4Controller/src/control_test/ekf_pose/: CMakeLists.txt
src/px4Controller/src/control_test/ekf_pose/config/: ekf_pose.rviz
src/px4Controller/src/control_test/ekf_pose/launch/: PX4_vicon.launch  PX4_vio_drone.yaml
src/px4Controller/src/control_test/ekf_pose/src/: ekf_node.cpp  ekf_node_mocap.cpp  ekf_node_vio.cpp  ekf_node_vio_timesync.cpp  ekf_node_vio_timesync_with_acc_pub.cpp
src/px4Controller/src/control_test/odom_visualization/launch/: odom_visualization.launch
src/px4Controller/src/control_test/odom_visualization/src/: odom_visualization.cpp
src/px4Controller/src/control_test/traj_server/: CMakeLists.txt
src/px4Controller/src/control_test/traj_server/launch/: traj_server.launch
src/px4Controller/src/control_test/traj_server/src/: traj_server.cpp
src/px4Controller/src/control_test/waypoint_generator/src/: sample_waypoints.h
src/px4Controller/src/control_test/waypoint_trajectory_generator/launch/: traj_gen.launch  traj_gen_noplan.launch
src/px4Controller/src/control_test/waypoint_trajectory_generator/src/: trajectory_generator_node.cpp  trajectory_generator_waypoint.cpp
src/px4Controller/src/px4ctrl/: README.md
src/px4Controller/src/px4ctrl/config/: ctrl_param_fpv.yaml  ctrl_param_fpv_most_accurate.yaml
src/px4Controller/src/px4ctrl/launch/: run_ctrl.launch  takeoff.sh
src/px4Controller/src/px4ctrl/src/: PX4CtrlFSM.cpp  PX4CtrlFSM.h  controller.cpp  controller.h  input.cpp  px4ctrl_node.cpp
src/px4Controller/src/utils/quadrotor_msgs/: CMakeLists.txt
src/realsense-ros/: README.md
src/realsense-ros/realsense2_camera/include/realsense2_camera/: t265_realsense_node.h
src/realsense-ros/realsense2_camera/src/: base_realsense_node.cpp  t265_realsense_node.cpp
src/sfc/: README.md
src/sfc/DecompROS/decomp_ros_utils/include/decomp_geometry/: ellipsoid.h  geometric_utils.h  polyhedron.h
src/sfc/DecompROS/decomp_ros_utils/include/decomp_ros_utils/: data_ros_utils.h
src/sfc/DecompROS/decomp_ros_utils/include/decomp_util/: ellipsoid_decomp.h  line_segment.h
src/yolo_fdsst_piv/: README.md  install_deps.sh
src/yolo_fdsst_piv/dyn_object_tracker/: CMakeLists.txt  bag_record.sh  package.xml  pclfilter.xml
src/yolo_fdsst_piv/dyn_object_tracker/config/: PIV.yaml  PIV_sim.yaml
src/yolo_fdsst_piv/dyn_object_tracker/include/: DBSCAN_simple.h  dbscan.h  kdtree.h  nanoflann.hpp  original.h
src/yolo_fdsst_piv/dyn_object_tracker/launch/: imu_boost.sh  pcl_filter_hw.launch  pcl_filter_rgb.launch  piv_filter_start.launch  piv_filter_start_sim.launch
src/yolo_fdsst_piv/dyn_object_tracker/scripts/: dynobs_tracker_yolodet_hw1.py  utils.py
src/yolo_fdsst_piv/dyn_object_tracker/src/: Tools.cpp  Tools.h  chen_filter_rgb.cpp  dbscan.cpp  fft_test  fft_test.cpp  kalman.cpp  kalman.hpp  piv_nodelet.cpp
src/yolo_fdsst_piv/yolo_fastest_ros/ncnn/: CMakeLists(复件).txt  CMakeLists.txt  demo.cpp  package.xml  yolonode.xml
src/yolo_fdsst_piv/yolo_fastest_ros/ncnn/config/: yolo_ros.yaml  yolo_ros_sim.yaml
src/yolo_fdsst_piv/yolo_fastest_ros/ncnn/launch/: cpu_performance.sh  cpu_performance_sim.sh  sim_yolo_ros.launch  yolo_ros.launch
src/yolo_fdsst_piv/yolo_fastest_ros/ncnn/lib/cmake/: OGLCompilerTargets-release.cmake  OSDependentTargets-release.cmake  OSDependentTargets.cmake  SPIRVTargets-release.cmake  glslangTargets-release.cmake
src/yolo_fdsst_piv/yolo_fastest_ros/ncnn/src/: Makefile  fdssttracker.cpp  opcv_kcf.cpp  rosnode_yolo.cpp  tracker  tracker_kcf  trackingTarget.cpp  yolo-fastestv2.cpp
src/yolo_fdsst_piv/yolo_fastest_ros/ncnn/src/include/: fdssttracker.hpp  recttools.hpp  tracker.h  yolo-fastestv2.h
(+2 files in other folders)
